<resources>
    <string name="app_name">Coffee Amount Converter</string>
    <string name="action_settings">Settings</string>
    <string name="waterOuncesLabel">Water ounces</string>
    <string name="buttonClear">Clear</string>
    <string name="buttonConvert">Convert</string>
    <string name="title_activity_results">Results</string>
    <string name="newActivity">My New Activity</string>
    <string name="myResultsLabel">My Results</string>
    <string name="backButton">Back to amounts</string>
    <string name="resultsAmouont">Results amounts</string>
    <string name="testString">Test string</string>
</resources>
